// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`embedded ConditionalExpression should transform <ConditionalExpression/> with ThemeProvider's fontSize 1`] = `
<html>
  <head>
    <style
      data-styled=""
      data-styled-version="4.4.1"
    >
      
      
/* sc-component-id: sc-bdVaJa */
.iTFtex{font-size:0.48rem;}
    </style>
  </head>
  <body>
    <div>
      <button
        class="sc-bdVaJa iTFtex"
      />
    </div>
  </body>
</html>
`;

exports[`embedded ConditionalExpression should transform <ConditionalExpression/> with self fontSize 1`] = `
<html>
  <head>
    <style
      data-styled=""
      data-styled-version="4.4.1"
    >
      
      
/* sc-component-id: sc-bdVaJa */
.iTFtex{font-size:0.48rem;}
      
/* sc-component-id: sc-bwzfXH */
.eSDCcM{font-size:0.24rem;}
    </style>
  </head>
  <body>
    <div>
      <button
        class="sc-bwzfXH eSDCcM"
      />
    </div>
  </body>
</html>
`;
